--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,22 +3,26 @@
 
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/fi_rr_home"
+        android:icon="@drawable/nav_home"
         android:title="@string/title_home" />
 
     <item
         android:id="@+id/navigation_plan"
-        android:icon="@drawable/fi_rr_notebook"
+        android:icon="@drawable/nav_progress"
         android:title="@string/title_plan" />
 
     <item
+        android:id="@+id/placeholder"
+        android:title=""/>
+
+    <item
         android:id="@+id/navigation_rank"
-        android:icon="@drawable/fi_rr_trophy"
+        android:icon="@drawable/nav_ranking"
         android:title="@string/title_rank" />
 
     <item
         android:id="@+id/navigation_profile"
-        android:icon="@drawable/fi_rr_user"
+        android:icon="@drawable/nav_profil"
         android:title="@string/title_profile" />
 
 </menu>
