--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -10,7 +10,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:paddingBottom="24dp">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/shop_btn"
@@ -18,6 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="24dp"
+            android:focusable="true"
             app:cardCornerRadius="12dp"
             android:clickable="true"
             app:layout_constraintStart_toStartOf="parent"
