--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -26,6 +26,11 @@
 <!--        <item name="textInputStyle">@style/Widget.App.TextInputLayout</item>-->
     </style>
 
+    <style name="ThemeOverlay.App.TimePicker" parent="ThemeOverlay.MaterialComponents.TimePicker">
+        <item name="colorPrimary">@color/normal_green</item>
+        <item name="colorOnPrimary">@color/white</item>
+    </style>
+
     <style name="CustomCancelButton" parent="Widget.MaterialComponents.MaterialCalendar.HeaderCancelButton">
         <item name="android:textColor">@color/color_error</item> <!-- Set the desired color -->
         <item name="iconTint">@color/color_error</item> <!-- Set the desired color -->
