--- a/app/src/main/res/layout/unsmoke_widget.xml
+++ b/app/src/main/res/layout/unsmoke_widget.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:theme="@style/Theme.Unsmoke.AppWidgetContainer"
     android:layout_width="match_parent"
     android:layout_height="200dp"
     android:padding="0dp">
@@ -19,9 +20,8 @@
         android:src="@drawable/icon_fire_widget"
         android:layout_centerVertical="true" />
 
-    <android.widget.TextView
+    <TextView
         android:id="@+id/streak_widget"
-        android:fontFamily="@font/poppins_semibold"
         android:includeFontPadding="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -36,13 +36,13 @@
         android:layout_alignBottom="@id/imageView"
         android:layout_alignTop="@id/imageView"/>
 
-    <android.widget.TextView
+    <TextView
+        android:id="@+id/motivational_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
         android:layout_toStartOf="@+id/imageView"
-        android:fontFamily="@font/poppins_bold"
         android:textStyle="bold"
         android:gravity="center_vertical"
         android:padding="16dp"
