--- a/app/src/main/res/layout/unsmoke_widget.xml
+++ b/app/src/main/res/layout/unsmoke_widget.xml
@@ -3,51 +3,78 @@
     android:theme="@style/Theme.Unsmoke.AppWidgetContainer"
     android:layout_width="match_parent"
     android:layout_height="200dp"
+    android:background="#2B9C6A"
     android:padding="0dp">
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        android:src="@drawable/lung_background" />
+        android:paddingStart="0dp"
+        android:paddingTop="36dp"
+        android:paddingEnd="64dp"
+        android:scaleX="2"
+        android:scaleY="2"
+        android:src="@drawable/widget_bg" />
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_marginEnd="32dp"
-        android:layout_alignParentEnd="true"
-        android:src="@drawable/icon_fire_widget"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_alignParentStart="true"
+        android:src="@drawable/widget_streak"
         android:layout_centerVertical="true" />
 
     <TextView
         android:id="@+id/streak_widget"
-        android:includeFontPadding="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="32dp"
-        android:text="14"
-        android:textColor="@color/accent_white"
-        android:gravity="center"
-        android:textStyle="bold"
-        android:textSize="42sp"
-        android:layout_alignEnd="@id/imageView"
         android:layout_alignStart="@id/imageView"
+        android:layout_alignTop="@id/imageView"
+        android:layout_alignEnd="@id/imageView"
         android:layout_alignBottom="@id/imageView"
-        android:layout_alignTop="@id/imageView"/>
+        android:gravity="center"
+        android:includeFontPadding="true"
+        android:paddingTop="12dp"
+        android:text="15"
+        android:textColor="@color/accent_white"
+        android:textSize="42sp"
+        android:textStyle="bold"/>
 
-    <TextView
-        android:id="@+id/motivational_text"
+<!--    <TextView-->
+<!--        android:id="@+id/motivational_text"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_alignParentEnd="true"-->
+<!--        android:layout_centerVertical="true"-->
+<!--        android:layout_marginEnd="0dp"-->
+<!--        android:layout_toEndOf="@+id/imageView"-->
+<!--        android:gravity="center_vertical"-->
+<!--        android:padding="16dp"-->
+<!--        android:text="Semangat Broohh \nRarrrwhhhh!!"-->
+<!--        android:textColor="@color/accent_white"-->
+<!--        android:textSize="32sp"-->
+<!--        android:textStyle="bold" />-->
+
+    <ImageView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
-        android:layout_toStartOf="@+id/imageView"
-        android:textStyle="bold"
-        android:gravity="center_vertical"
-        android:padding="16dp"
-        android:text="Semangat Broohh \nRarrrwhhhh!!"
-        android:textColor="@color/accent_white"
-        android:textSize="32sp" />
+        android:layout_alignEnd="@id/imageView"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="16dp"
+        android:layout_toEndOf="@+id/imageView"
+        android:src="@drawable/widget_word_word" />
+
+
+    <ImageView
+        android:layout_width="84dp"
+        android:layout_height="wrap_content"
+        android:src="@drawable/widget_watermark"
+        android:layout_marginBottom="24dp"
+        android:layout_marginEnd="42dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"/>
 
 </RelativeLayout>
