--- a/app/src/main/res/layout/fragment_personalized_eight.xml
+++ b/app/src/main/res/layout/fragment_personalized_eight.xml
@@ -25,6 +25,7 @@
         android:id="@+id/text_input_layout_wake_up_time"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:helperText="@string/select_a_time_approximately"
         app:boxBackgroundMode="outline"
         app:boxCornerRadiusBottomEnd="16dp"
         app:boxCornerRadiusBottomStart="16dp"
@@ -43,8 +44,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="date"
-            tools:ignore="SpeakableTextPresentCheck"
-            android:hint="@string/select_a_time_approximately" />
+            tools:ignore="SpeakableTextPresentCheck" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -66,6 +66,7 @@
         android:id="@+id/text_input_layout_first_smoke_time"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:helperText="@string/select_a_time_approximately"
         app:boxBackgroundMode="outline"
         app:boxCornerRadiusBottomEnd="16dp"
         app:boxCornerRadiusBottomStart="16dp"
@@ -84,8 +85,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="date"
-            tools:ignore="SpeakableTextPresentCheck"
-            android:hint="@string/select_a_time_approximately" />
+            tools:ignore="SpeakableTextPresentCheck" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
