--- a/app/src/main/res/layout/unsmoke_widget.xml
+++ b/app/src/main/res/layout/unsmoke_widget.xml
@@ -57,6 +57,7 @@
 <!--        android:textStyle="bold" />-->
 
     <ImageView
+        android:id="@+id/content"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_alignEnd="@id/imageView"
