--- a/app/src/main/res/layout/inventory_item.xml
+++ b/app/src/main/res/layout/inventory_item.xml
@@ -45,6 +45,21 @@
             app:layout_constraintStart_toEndOf="@id/photo_holder"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <TextView
+            android:id="@+id/equiped_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:fontFamily="@font/poppins_semibold"
+            android:gravity="right"
+            android:padding="4dp"
+            android:text="@string/equiped"
+            android:textColor="@color/accent_purple"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
